Fixed margin bug on small devices.

--- a/css/resumeStyling.css
+++ b/css/resumeStyling.css
@@ -97,7 +97,7 @@ footer{
     font-size: 2.2rem;
     margin-bottom: 8px;
 }
-@media(max-width: 930px) and (orientation: portrait){
+@media(max-width: 600px) and (orientation: portrait){
     html{
         font-size: 8px;
     }
@@ -106,6 +106,18 @@ footer{
     }
     #Master{
         margin-left: 4px;
+        margin-right: 4px;
+    }
+}
+@media(min-width: 600px) and (max-width: 930px) and (orientation: portrait){
+    html{
+        font-size: 8px;
+    }
+    .checkHide{
+        display: none;
+    }
+    #Master{
+        margin-left: 20%;
         margin-right: 4px;
     }
 }
